packages/preview/rubber-article/0.4.2/CHANGELOG.md
# [v0.4.2](https://github.com/npikall/rubber-article/releases/tag/v0.4.2)
- new function for abstract
- new option to set columns for entire document
- changed default behaviour of metadata in `maketitle`
- added `balance` function for balancing columns in the document

# [v0.4.1](https://github.com/npikall/rubber-article/releases/tag/v0.4.1)
- new function for the list of figures
- new function for the list of tables
- new feature for short and long captions (one outlined, one with the figure)
- fixed figure and table outline style

# [v0.4.0](https://github.com/npikall/rubber-article/releases/tag/v0.4.0)
- added tests
- fixed spacings of the paragraphs, figures and equations
- removed appendix and bibliography feature, because of redundancy
- fixed Table cell spaces
- changed the template

# [v0.3.2](https://github.com/npikall/rubber-article/releases/tag/v0.3.2)
New Features:
- fix: typo in function arguments
- fragmentized, cleared up codebase
- table function with standard formatting
- header linewidth

# [v0.3.1](https://github.com/npikall/rubber-article/releases/tag/v0.3.1)
New Feature:
- new function to only format the appendix

# [v0.3.0](https://github.com/npikall/rubber-article/releases/tag/v0.3.0)
New Features:
- integrated bibliography
- better handling of the figure captions
- chapterwise numbering of equations
- headers have been updated
- an appendix can be added

# [v0.2.0](https://github.com/npikall/rubber-article/releases/tag/v0.2.0)
Added some more funcitonality to the package.
- Headers are now integrated, useing hydra.
- List indentation are now set to 1.5em.

# [v0.1.0](https://github.com/npikall/rubber-article/releases/tag/v0.1.0)
Initial Release
